# Copyright 2018 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("quic") {
  sources = [
    "quic_connection.h",
    "quic_connection_factory.cc",
    "quic_connection_factory.h",
    "quic_connection_factory_impl.cc",
    "quic_connection_factory_impl.h",
    "quic_connection_impl.cc",
    "quic_connection_impl.h",
    "quic_service.cc",
    "quic_service.h",
  ]

  public_configs = [ "//third_party/chromium_quic:chromium_quic_config" ]

  deps = [
    "//base",
    "//msgs",
    "//platform",
    "//third_party/chromium_quic",
  ]
}

source_set("test_support") {
  sources = [
    "testing/fake_quic_connection.cc",
    "testing/fake_quic_connection.h",
    "testing/fake_quic_connection_factory.cc",
    "testing/fake_quic_connection_factory.h",
  ]

  deps = [
    "//base",
    "//msgs",
    "//platform",
  ]
}
