# Copyright 2019 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("channel") {
  sources = [
    "cast_message_handler.h",
    "cast_socket.cc",
    "cast_socket.h",
    "message_framer.cc",
    "message_framer.h",
    "message_util.h",
    "virtual_connection.cc",
    "virtual_connection.h",
    "virtual_connection_manager.cc",
    "virtual_connection_manager.h",
  ]

  public_deps = [
    "../../../platform",
    "../../../third_party/abseil",
    "../../../util",
    "proto",
  ]
}

source_set("unittests") {
  testonly = true
  sources = [
    "cast_socket_unittest.cc",
    "message_framer_unittest.cc",
    "virtual_connection_manager_unittest.cc",
  ]

  deps = [
    ":channel",
    "../../../platform",
    "../../../platform:test",
    "../../../third_party/googletest:gmock",
    "../../../third_party/googletest:gtest",
    "../../../util",
    "../../common/certificate/proto:unittest_proto",
    "proto",
  ]
}
