# Copyright 2019 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build_overrides/build.gni")

source_set("mdns") {
  sources = [
    "mdns_constants.h",
    "mdns_parsing.cc",
    "mdns_parsing.h",
  ]

  deps = [
    "../../../osp_base",
    "../../../platform",
    "../../../third_party/abseil",
  ]

  if (build_with_chromium) {
    configs -= [ "//build/config/compiler:default_include_dirs" ]
  }
  configs += [ "../../../:root_config_overrides" ]
}

source_set("mdns_unittests") {
  testonly = true

  sources = [
    "mdns_parsing_unittest.cc",
  ]

  deps = [
    ":mdns",
    "../../../osp_base",
    "../../../platform",
    "../../../third_party/abseil",
    "../../../third_party/googletest:gmock",
    "../../../third_party/googletest:gtest",
  ]

  configs += [ "../../../:root_config_overrides" ]
}
