# Copyright 2019 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("channel") {
  sources = [
    "reciever_socket_factory.cc",
    "reciever_socket_factory.h",
  ]

  public_deps = [
    "../../../platform",
  ]
}
