# Copyright 2019 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build_overrides/build.gni")

source_set("channel") {
  sources = [
    "cast_auth_util.cc",
    "cast_auth_util.h",
    "message_util.cc",
    "message_util.h",
    "sender_socket_factory.cc",
    "sender_socket_factory.h",
  ]

  deps = [
    "../../common/channel/proto",
  ]

  public_deps = [
    "../../../platform",
  ]

  configs += [ "../../../build:allow_build_from_embedder" ]
}

source_set("unittests") {
  testonly = true

  # TODO(jophba): allow test certificate lookup from the embedder, so this can
  # run in Chrome.
  if (!build_with_chromium) {
    sources = [
      "cast_auth_util_unittest.cc",
    ]

    deps = [
      ":channel",
      "../../../platform",
      "../../../third_party/googletest:gtest",
      "../../common/certificate/proto:unittest_proto",
      "../../common/channel/proto",
    ]
  }

  configs += [ "../../../build:allow_build_from_embedder" ]
}
