# Copyright 2018 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build_overrides/build.gni")
import("../../build/config/services.gni")

source_set("testing") {
  testonly = true

  if (use_mdns_responder) {
  sources = [
    "fake_mdns_platform_service.cc",
    "fake_mdns_platform_service.h",
    "fake_mdns_responder_adapter.cc",
    "fake_mdns_responder_adapter.h",
  ]

  deps = [
    "../../../platform",
    "../discovery/mdns:mdns_interface",
  ]
  }
}

source_set("unittests") {
  testonly = true

  if (use_mdns_responder) {
  sources = [
    "fake_mdns_platform_service_unittest.cc",
    "fake_mdns_responder_adapter_unittest.cc",
  ]

  deps = [
    ":testing",
    "../../../third_party/abseil",
    "../../../third_party/googletest:gtest",
  ]
  }
}
